--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,15 @@ leptos_router = { version = "0.6", features = ["csr", "nightly"] }
 console_log = "1"
 log = "0.4"
 console_error_panic_hook = "0.1"
+once_cell = "1.19.0"
+serde_json = "1"
+serde = { version = "1.0", features = ["derive"] }
+
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+# We need the `json` feature flag to serialize/deserialize JSON payloads
+features = ["json", "rustls-tls", "cookies"]
 
 # utils
 # strum = { version = "0.25", features = ["derive", "strum_macros"] }
