--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ console_log = "1"
 log = "0.4"
 console_error_panic_hook = "0.1"
 once_cell = "1.19.0"
+# Data handler
+validator = "0.16"
 serde_json = "1"
 serde = { version = "1.0", features = ["derive"] }
 
